apps/zomboid/control/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zomboid-control
  namespace: zomboid
  labels:
    app.kubernetes.io/name: zomboid-control
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zomboid-control
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
